tests/pool/fail127.java
// PA1 lex/parse binop fail
class Main {
	public static void main(String[] args) {
		System.out.println((new Test()).test());
	}
}

class id {
    public int p(){
        int x;
        x = 1 << 0;
        return x;
    }
}

